--- a/Customer/blank.html
+++ b/Customer/blank.html
@@ -22,7 +22,7 @@
     <section class="section-navbar ">
         <!-- <h1>Navbar</h1> -->
         <nav class="navbar navbar-light navbar-expand-lg container py-3">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="/index.html">
                 <img src="../assets/images/logo.png" height="70" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
@@ -61,33 +61,34 @@
                     </li>
                 </ul>
             </div>
+        </nav>
     </section>
 
     <section class="section-main py-5 px-2">
         <div class="row">
             <div class="side-navbar col-12 col-lg-2 flex-sm-row flex-md-row overflow-auto">
                 <div class="list-group flex-row flex-md-column " id="mainTabs" role="tablist">
-                    <a href="dashboad.html" class="list-group-item text-center p-4 my-3 list-group-item-action">
+                    <a href="dashboad.html" class="list-group-item text-center p-4 mt-0 mb-4 list-group-item-action">
                         <i class="far fa-star fa-3x d-block mb-2"></i>
                         Dashboard
                     </a>
-                    <a href="services.html" class="list-group-item text-center p-4 my-3 list-group-item-action active">
+                    <a href="services.html" class="list-group-item text-center p-4 mt-0 mb-4 list-group-item-action active">
                         <i class="fas fa-briefcase fa-3x d-block mb-2"></i>
                         Services
                     </a>
-                    <a href="orders.html" class="list-group-item text-center p-4 my-3 list-group-item-action">
+                    <a href="orders.html" class="list-group-item text-center p-4 mt-0 mb-4 list-group-item-action">
                         <i class="fas fa-shopping-cart fa-3x d-block mb-2"></i>
                         Orders
                     </a>
-                    <a href="finance.html" class="list-group-item text-center p-4 my-3 list-group-item-action">
+                    <a href="finance.html" class="list-group-item text-center p-4 mt-0 mb-4 list-group-item-action">
                         <i class="fas fa-coins fa-3x d-block mb-2"></i>
                         Finaice
                     </a>
-                    <a href="account.html" class="list-group-item text-center p-4 my-3 list-group-item-action">
+                    <a href="account.html" class="list-group-item text-center p-4 mt-0 mb-4 list-group-item-action">
                         <i class="far fa-address-card fa-3x d-block mb-2"></i>
                         Account
                     </a>
-                    <a href="blank.html" class="list-group-item text-center p-4 my-3 list-group-item-action">
+                    <a href="blank.html" class="list-group-item text-center p-4 mt-0 mb-4 list-group-item-action">
                         <i class="far fa-question-circle fa-3x d-block mb-2"></i>
                         Help
                     </a>
