--- a/Customer/invoiceDetails.html
+++ b/Customer/invoiceDetails.html
@@ -72,7 +72,7 @@
                         <i class="far fa-star fa-3x d-block mb-2"></i>
                         Dashboard
                     </a>
-                    <a href="services.html" class="list-group-item text-center p-4 mt-0 mb-4 list-group-item-action active">
+                    <a href="services.html" class="list-group-item text-center p-4 mt-0 mb-4 list-group-item-action">
                         <i class="fas fa-briefcase fa-3x d-block mb-2"></i>
                         Services
                     </a>
@@ -80,7 +80,7 @@
                         <i class="fas fa-shopping-cart fa-3x d-block mb-2"></i>
                         Orders
                     </a>
-                    <a href="finance.html" class="list-group-item text-center p-4 mt-0 mb-4 list-group-item-action">
+                    <a href="finance.html" class="list-group-item text-center p-4 mt-0 mb-4 list-group-item-action active">
                         <i class="fas fa-coins fa-3x d-block mb-2"></i>
                         Finaice
                     </a>
@@ -95,36 +95,12 @@
                 </div>
             </div>
             <div class="col-12 col-lg-10 shadow py-3">
-                <h1 class="section-title-side"><span>Select Service Mode</span></h1>
-                <div class="row mb-5 card-deck">
-                    <div class="card rounded-lg">
-                        <div class="card-body pb-0">
-                            <h5 class="card-title font-weight-bold d-flex align-items-center"><i
-                                    class="fas fa-space-shuttle fa-3x mr-3"></i> Easy Mode</h5>
-                            <p class="card-text">Just pick your service, <span class="nz-pill-gold"> upload your
-                                    document and we will call </span> you later to complete the process </p>
-                        </div>
-                        <div class="card-footer bg-white border-0">
-                            <a href="onestepmode.html" class="btn nz-btn-gold text-uppercase font-weight-bold">Start
-                                Now</a>
-                        </div>
-                    </div>
-
-                    <div class="card rounded-lg">
-                        <div class="card-body pb-0">
-                            <h5 class="card-title font-weight-bold d-flex align-items-center"><i
-                                    class="fas fa-hat-wizard fa-3x mr-3"></i> Advanced Mode</h5>
-                            <p class="card-text">If you have time, Follow few simple steps to <span
-                                    class="nz-pill-gold">customize</span> you
-                                order</p>
-                        </div>
-                        <div class="card-footer bg-white border-0">
-                            <a href="multistepmode.html" class="btn nz-btn-gold text-uppercase font-weight-bold">Start
-                                Now</a>
-                        </div>
+                <h1 class="section-title-side"><span>Invoice #78476347932</span></h1>
+                <div class="row">
+                    <div class="col-12">
+                        
                     </div>
                 </div>
-
             </div>
         </div>
     </section>
