--- a/login.html
+++ b/login.html
@@ -64,6 +64,7 @@
                     </li>
                 </ul>
             </div>
+        </nav>
     </section>
     <section class=" section-login-singnup py-5 container">
         <!-- <h1>Hero</h1> -->
