--- a/singup.html
+++ b/singup.html
@@ -65,6 +65,7 @@
                     </li>
                 </ul>
             </div>
+        </nav>
     </section>
     <section class=" section-login-singnup py-5 container">
         <!-- <h1>Hero</h1> -->
@@ -127,7 +128,8 @@
                 </div>
             </div>
         </div>
-    </section>
+            </nav>
+</section>
 
     <section class="section-our-partiners py-5 mt-5 has-ninjaz-face-right">
         <!-- <h1>Our Partiners</h1> -->
