--- a/Customer/finance.html
+++ b/Customer/finance.html
@@ -22,7 +22,7 @@
     <section class="section-navbar ">
         <!-- <h1>Navbar</h1> -->
         <nav class="navbar navbar-light navbar-expand-lg container py-3">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="/index.html">
                 <img src="../assets/images/logo.png" height="70" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
@@ -61,33 +61,35 @@
                     </li>
                 </ul>
             </div>
+        </nav>
     </section>
 
     <section class="section-main py-5 px-2">
         <div class="row px-3">
             <div class="side-navbar col-12 col-lg-2 flex-sm-row flex-md-row overflow-auto">
                 <div class="list-group flex-row flex-md-column " id="mainTabs" role="tablist">
-                    <a href="dashboad.html" class="list-group-item text-center p-4 my-3 list-group-item-action">
+                    <a href="dashboad.html" class="list-group-item text-center p-4 mt-0 mb-4 list-group-item-action">
                         <i class="far fa-star fa-3x d-block mb-2"></i>
                         Dashboard
                     </a>
-                    <a href="services.html" class="list-group-item text-center p-4 my-3 list-group-item-action">
+                    <a href="services.html" class="list-group-item text-center p-4 mt-0 mb-4 list-group-item-action">
                         <i class="fas fa-briefcase fa-3x d-block mb-2"></i>
                         Services
                     </a>
-                    <a href="orders.html" class="list-group-item text-center p-4 my-3 list-group-item-action">
+                    <a href="orders.html" class="list-group-item text-center p-4 mt-0 mb-4 list-group-item-action">
                         <i class="fas fa-shopping-cart fa-3x d-block mb-2"></i>
                         Orders
                     </a>
-                    <a href="finance.html" class="list-group-item text-center p-4 my-3 list-group-item-action active">
+                    <a href="finance.html"
+                        class="list-group-item text-center p-4 mt-0 mb-4 list-group-item-action active">
                         <i class="fas fa-coins fa-3x d-block mb-2"></i>
                         Finaice
                     </a>
-                    <a href="account.html" class="list-group-item text-center p-4 my-3 list-group-item-action">
+                    <a href="account.html" class="list-group-item text-center p-4 mt-0 mb-4 list-group-item-action">
                         <i class="far fa-address-card fa-3x d-block mb-2"></i>
                         Account
                     </a>
-                    <a href="blank.html" class="list-group-item text-center p-4 my-3 list-group-item-action">
+                    <a href="blank.html" class="list-group-item text-center p-4 mt-0 mb-4 list-group-item-action">
                         <i class="far fa-question-circle fa-3x d-block mb-2"></i>
                         Help
                     </a>
@@ -95,6 +97,59 @@
             </div>
             <div class="col-12 col-lg-10 shadow py-3">
                 <h1 class="section-title-side"><span>Invoices List</span></h1>
+                <ul class="list-group">
+                    <li class="list-group-item invoice-card my-2"> <a href="invoiceDetails.html"
+                            class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none">
+                            <span class="align-self-start font-weight-bold">
+                                <i class="fas fa-chevron-circle-right mr-2"></i> #78476347932
+                            </span>
+                            <span>300 USD</span>
+                            <span>Paypal</span>
+                            <span>8/21/2019 11:53:36 AM</span>
+                            <span class=" badge badge-pill badge-success align-self-end">Colected</span></a>
+                    </li>
+                    <li class="list-group-item invoice-card my-2"> <a href="invoiceDetails.html"
+                            class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none">
+                            <span class="align-self-start font-weight-bold">
+                                <i class="fas fa-chevron-circle-right mr-2"></i> #78476347932
+                            </span>
+                            <span>300 USD</span>
+                            <span>Paypal</span>
+                            <span>8/21/2019 11:53:36 AM</span>
+                            <span class=" badge badge-pill badge-danger align-self-end">Waiting for
+                                collection</span></a>
+                    </li>
+                    <li class="list-group-item invoice-card my-2"> <a href="invoiceDetails.html"
+                            class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none">
+                            <span class="align-self-start font-weight-bold">
+                                <i class="fas fa-chevron-circle-right mr-2"></i> #78476347932
+                            </span>
+                            <span>300 USD</span>
+                            <span>Paypal</span>
+                            <span>8/21/2019 11:53:36 AM</span>
+                            <span class=" badge badge-pill badge-success align-self-end">Completed</span></a>
+                    </li>
+                    <li class="list-group-item invoice-card my-2"> <a href="invoiceDetails.html"
+                            class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none">
+                            <span class="align-self-start font-weight-bold">
+                                <i class="fas fa-chevron-circle-right mr-2"></i> #78476347932
+                            </span>
+                            <span>300 USD</span>
+                            <span>Paypal</span>
+                            <span>8/21/2019 11:53:36 AM</span>
+                            <span class=" badge badge-pill badge-success align-self-end">Completed</span></a>
+                    </li>
+                    <li class="list-group-item invoice-card my-2"> <a href="invoiceDetails.html"
+                            class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none">
+                            <span class="align-self-start font-weight-bold">
+                                <i class="fas fa-chevron-circle-right mr-2"></i> #78476347932
+                            </span>
+                            <span>300 USD</span>
+                            <span>Paypal</span>
+                            <span>8/21/2019 11:53:36 AM</span>
+                            <span class=" badge badge-pill badge-success align-self-end">Completed</span></a>
+                    </li>
+                </ul>
             </div>
         </div>
     </section>
