Add Invoice Details content

--- a/Customer/invoiceDetails.html
+++ b/Customer/invoiceDetails.html
@@ -42,6 +42,10 @@
                         <a class="nav-link text-dark " href="dashboad.html"><span
                                 class="nz-btn-gold py-0 my-2 px-2">Account</span></a>
                     </li>
+                    <li class="nav-item mx-3 ">
+                        <a class="nav-link text-dark" href="/index.html">Log out </a>
+
+                    </li>
                     <li class="nav-item mx-3">
                         <div class="dropdown">
                             <button class="btn btn-link dropdown-toggle text-uppercase text-dark" type="button"
@@ -80,7 +84,8 @@
                         <i class="fas fa-shopping-cart fa-3x d-block mb-2"></i>
                         Orders
                     </a>
-                    <a href="finance.html" class="list-group-item text-center p-4 mt-0 mb-4 list-group-item-action active">
+                    <a href="finance.html"
+                        class="list-group-item text-center p-4 mt-0 mb-4 list-group-item-action active">
                         <i class="fas fa-coins fa-3x d-block mb-2"></i>
                         Finaice
                     </a>
@@ -94,12 +99,79 @@
                     </a>
                 </div>
             </div>
-            <div class="col-12 col-lg-10 shadow py-3">
+            <div class="col-12 col-lg-10 shadow p-5">
                 <h1 class="section-title-side"><span>Invoice #78476347932</span></h1>
                 <div class="row">
-                    <div class="col-12">
-                        
+
+                    <div class="col-12 mb-4 col-md-12 order-details-wrapper">
+                        <div class="form-group row">
+                            <label class="col-3">Creation Date</label>
+                            <label class="col-12 col-md-9">8/21/2019 11:53:36 AM</label>
+                        </div>
+
+                        <div class="form-group row">
+                            <label class="col-3">Customer Name</label>
+                            <label class="col-12 col-md-9">
+                                Marawan abd el Mageed Co.
+                            </label>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-3">Status</label>
+                            <div class="col-12 col-md-9">
+                                <span class=" badge badge-pill badge-danger">UnPaid</span></a>
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
+                            <label class="col-3">Items</label>
+                            <div class="col-12 col-md-9">
+                                <ul class="list-group">
+                                    <li class="list-group-item order-card my-2"> <a href="orderDetails.html"
+                                            class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none"><span
+                                                class="align-self-start font-weight-bold"><i
+                                                    class="fas fa-chevron-circle-right mr-2"></i>#78476347932</span>
+                                            <span>Legal Translation</span>
+                                            <span>300 USD</span>
+                                            <span
+                                                class=" badge badge-pill badge-success align-self-end">Completed</span>
+                                        </a>
+                                    </li>
+                                    <li class="list-group-item order-card my-2"> <a href="orderDetails.html"
+                                            class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none"><span
+                                                class="align-self-start font-weight-bold"><i
+                                                    class="fas fa-chevron-circle-right mr-2"></i>#78476347932</span>
+                                            <span>Legal Translation</span>
+                                            <span>300 USD</span>
+                                            <span
+                                                class=" badge badge-pill badge-success align-self-end">Completed</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-3">Amount</label>
+                            <div class="col-12 col-md-9">
+                                <div class="lead"><span class="font-weight-bold">
+                                        600
+                                    </span> USD</div>
+                            </div>
+                        </div>
+                        <div class=" row">
+                            <label class="col-3">Pay Now</label>
+                            <div class="col-12 col-md-9">
+                                <a href="payment.html"
+                                    class="btn nz-btn-gold btn-lg text-uppercase font-weight-bold px-5 mx-2">
+                                    PayPal
+                                </a>
+                                <a href="payment.html"
+                                    class="btn btn-outline-gold btn-lg text-uppercase font-weight-bold px-5 mx-2">
+                                    Credit Card
+                                </a>
+                            </div>
+                        </div>
                     </div>
+
                 </div>
             </div>
         </div>
