--- a/login.html
+++ b/login.html
@@ -90,8 +90,8 @@
                                     <label class="custom-control-label" for="customCheck1">Remamber me</label>
                                 </div>
                             </div>
-                            <button href="dashboad.html" class="btn btn-block nz-btn-gold btn-lg text-uppercase font-weight-normal"
-                                >Login</button>
+                            <a href="dashboad.html" class="btn btn-block nz-btn-gold btn-lg text-uppercase font-weight-normal"
+                                >Login</a>
                         </div>
                     </form>
                     <a href="/singup.html" class="d-block pt-3 nz-text-gold">I don't have account yet</a>
