--- a/Customer/blank.html
+++ b/Customer/blank.html
@@ -42,6 +42,9 @@
                         <a class="nav-link text-dark " href="dashboad.html"><span
                                 class="nz-btn-gold py-0 my-2 px-2">Account</span></a>
                     </li>
+                    <li class="nav-item mx-3 ">
+                        <a class="nav-link text-dark" href="/index.html">Log out </a>
+                    </li>
                     <li class="nav-item mx-3">
                         <div class="dropdown">
                             <button class="btn btn-link dropdown-toggle text-uppercase text-dark" type="button"
@@ -72,7 +75,8 @@
                         <i class="far fa-star fa-3x d-block mb-2"></i>
                         Dashboard
                     </a>
-                    <a href="services.html" class="list-group-item text-center p-4 mt-0 mb-4 list-group-item-action active">
+                    <a href="services.html"
+                        class="list-group-item text-center p-4 mt-0 mb-4 list-group-item-action active">
                         <i class="fas fa-briefcase fa-3x d-block mb-2"></i>
                         Services
                     </a>
@@ -94,7 +98,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-12 col-lg-10 shadow py-3">
+            <div class="col-12 col-lg-10 shadow p-5">
                 <h1 class="section-title-side"><span>Blank</span></h1>
             </div>
         </div>
