--- a/Customer/finance.html
+++ b/Customer/finance.html
@@ -42,6 +42,10 @@
                         <a class="nav-link text-dark " href="dashboad.html"><span
                                 class="nz-btn-gold py-0 my-2 px-2">Account</span></a>
                     </li>
+                    <li class="nav-item mx-3 ">
+                        <a class="nav-link text-dark" href="/index.html">Log out </a>
+
+                    </li>
                     <li class="nav-item mx-3">
                         <div class="dropdown">
                             <button class="btn btn-link dropdown-toggle text-uppercase text-dark" type="button"
@@ -95,7 +99,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-12 col-lg-10 shadow py-3">
+            <div class="col-12 col-lg-10 shadow p-5">
                 <h1 class="section-title-side"><span>Invoices List</span></h1>
                 <ul class="list-group">
                     <li class="list-group-item invoice-card my-2"> <a href="invoiceDetails.html"
@@ -106,7 +110,18 @@
                             <span>300 USD</span>
                             <span>Paypal</span>
                             <span>8/21/2019 11:53:36 AM</span>
-                            <span class=" badge badge-pill badge-success align-self-end">Colected</span></a>
+                            <span class=" badge badge-pill badge-success align-self-end">Paid</span></a>
+                    </li>
+                    <li class="list-group-item invoice-card my-2 border border-warning">
+                        <a href="invoiceDetails.html"
+                            class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none">
+                            <span class="align-self-start font-weight-bold">
+                                <i class="fas fa-chevron-circle-right mr-2"></i> #78476347932
+                            </span>
+                            <span>300 USD</span>
+                            <span>Paypal</span>
+                            <span>8/21/2019 11:53:36 AM</span>
+                            <span class=" badge badge-pill badge-danger align-self-end">Unpaid</span></a>
                     </li>
                     <li class="list-group-item invoice-card my-2"> <a href="invoiceDetails.html"
                             class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none">
@@ -116,8 +131,7 @@
                             <span>300 USD</span>
                             <span>Paypal</span>
                             <span>8/21/2019 11:53:36 AM</span>
-                            <span class=" badge badge-pill badge-danger align-self-end">Waiting for
-                                collection</span></a>
+                            <span class=" badge badge-pill badge-success align-self-end">Paid</span></a>
                     </li>
                     <li class="list-group-item invoice-card my-2"> <a href="invoiceDetails.html"
                             class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none">
@@ -127,7 +141,7 @@
                             <span>300 USD</span>
                             <span>Paypal</span>
                             <span>8/21/2019 11:53:36 AM</span>
-                            <span class=" badge badge-pill badge-success align-self-end">Completed</span></a>
+                            <span class=" badge badge-pill badge-success align-self-end">Paid</span></a>
                     </li>
                     <li class="list-group-item invoice-card my-2"> <a href="invoiceDetails.html"
                             class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none">
@@ -137,17 +151,7 @@
                             <span>300 USD</span>
                             <span>Paypal</span>
                             <span>8/21/2019 11:53:36 AM</span>
-                            <span class=" badge badge-pill badge-success align-self-end">Completed</span></a>
-                    </li>
-                    <li class="list-group-item invoice-card my-2"> <a href="invoiceDetails.html"
-                            class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none">
-                            <span class="align-self-start font-weight-bold">
-                                <i class="fas fa-chevron-circle-right mr-2"></i> #78476347932
-                            </span>
-                            <span>300 USD</span>
-                            <span>Paypal</span>
-                            <span>8/21/2019 11:53:36 AM</span>
-                            <span class=" badge badge-pill badge-success align-self-end">Completed</span></a>
+                            <span class=" badge badge-pill badge-success align-self-end">Paid</span></a>
                     </li>
                 </ul>
             </div>
