--- a/Customer/onestepmode.html
+++ b/Customer/onestepmode.html
@@ -41,6 +41,10 @@
                     <li class="nav-item mx-3">
                         <a class="nav-link text-dark " href="singup.html"><span
                                 class="nz-btn-gold py-0 my-2 px-2">Account</span></a>
+</li>
+<li class="nav-item mx-3 ">
+                        <a class="nav-link text-dark" href="/index.html">Log out </a>
+                    
                     </li>
                     <li class="nav-item mx-3">
                         <div class="dropdown">
@@ -93,7 +97,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-12 col-lg-10 shadow py-3">
+            <div class="col-12 col-lg-10 shadow p-5">
                 <h1 class="section-title-side"><span>Translation - <span class="font-weight-light">Easy
                             Mode</span></h1>
                 <form>
