--- a/Customer/select_service_mode.html
+++ b/Customer/select_service_mode.html
@@ -41,6 +41,10 @@
                     <li class="nav-item mx-3">
                         <a class="nav-link text-dark " href="dashboad.html"><span
                                 class="nz-btn-gold py-0 my-2 px-2">Account</span></a>
+</li>
+<li class="nav-item mx-3 ">
+                        <a class="nav-link text-dark" href="/index.html">Log out </a>
+                    
                     </li>
                     <li class="nav-item mx-3">
                         <div class="dropdown">
@@ -94,7 +98,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-12 col-lg-10 shadow py-3">
+            <div class="col-12 col-lg-10 shadow p-5">
                 <h1 class="section-title-side"><span>Select Service Mode</span></h1>
                 <div class="row mb-5 card-deck">
                     <div class="card rounded-lg">
