--- a/Customer/orders.html
+++ b/Customer/orders.html
@@ -109,7 +109,7 @@
                             <span>Arabic => German</span>
                             <span>300 USD</span>
                             <span>8/21/2019 11:53:36 AM</span>
-                            <span class=" badge badge-pill badge-success align-self-end">Completed</span></a></li>
+                            <span class=" badge badge-pill badge-warning align-self-end">Receive Bids</span></a></li>
                     <li class="list-group-item order-card my-2"> <a href="orderDetails.html"
                             class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none"><span
                                 class="align-self-start font-weight-bold"><i
@@ -145,7 +145,7 @@
                             <span>Arabic => German</span>
                             <span>300 USD</span>
                             <span>8/21/2019 11:53:36 AM</span>
-                            <span class=" badge badge-pill badge-success align-self-end">Completed</span></a></li>
+                            <span class=" badge badge-pill badge-dark align-self-end">Canceled</span></a></li>
                 </ul>
             </div>
         </div>
