--- a/Customer/dashboad.html
+++ b/Customer/dashboad.html
@@ -41,10 +41,10 @@
                     <li class="nav-item mx-3">
                         <a class="nav-link text-dark " href="singup.html"><span
                                 class="nz-btn-gold py-0 my-2 px-2">Account</span></a>
-</li>
-<li class="nav-item mx-3 ">
+                    </li>
+                    <li class="nav-item mx-3 ">
                         <a class="nav-link text-dark" href="/index.html">Log out </a>
-                    
+
                     </li>
                     <li class="nav-item mx-3">
                         <div class="dropdown">
@@ -453,7 +453,99 @@
                     </div>
                     <div class="col-12 col-lg-12">
                         <div class="row">
-                            <div class="col-12 col-lg-4">
+                            <div class="col-12 col-lg-7">
+                                <h1 class="section-title-side"><span>Recent orders</span></h1>
+                                <ul class="recent-odrder-list list-group">
+                                    <li class="list-group-item order-card my-2"> <a href="orderDetails.html"
+                                            class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none"><span
+                                                class="align-self-start font-weight-bold"><i
+                                                    class="fas fa-chevron-circle-right mr-2"></i>#78476347932</span>
+                                            <span>Legal Translation</span>
+                                            <span>Arabic => German</span>
+                                            <span>300 USD</span>
+                                            <span>8/21/2019 11:53:36 AM</span>
+                                            <span class=" badge badge-pill badge-warning align-self-end">Receive
+                                                Bids</span></a></li>
+                                    <li class="list-group-item order-card my-2"> <a href="orderDetails.html"
+                                            class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none"><span
+                                                class="align-self-start font-weight-bold"><i
+                                                    class="fas fa-chevron-circle-right mr-2"></i>#78476347932</span>
+                                            <span>Legal Translation</span>
+                                            <span>Arabic => German</span>
+                                            <span>300 USD</span>
+                                            <span>8/21/2019 11:53:36 AM</span>
+                                            <span
+                                                class=" badge badge-pill badge-success align-self-end">Completed</span></a>
+                                    </li>
+                                    <li class="list-group-item order-card my-2"> <a href="orderDetails.html"
+                                            class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none"><span
+                                                class="align-self-start font-weight-bold"><i
+                                                    class="fas fa-chevron-circle-right mr-2"></i>#78476347932</span>
+                                            <span>Legal Translation</span>
+                                            <span>Arabic => German</span>
+                                            <span>300 USD</span>
+                                            <span>8/21/2019 11:53:36 AM</span>
+                                            <span
+                                                class=" badge badge-pill badge-success align-self-end">Completed</span></a>
+                                    </li>
+                                    <li class="list-group-item order-card my-2"> <a href="orderDetails.html"
+                                            class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none"><span
+                                                class="align-self-start font-weight-bold"><i
+                                                    class="fas fa-chevron-circle-right mr-2"></i>#78476347932</span>
+                                            <span>Legal Translation</span>
+                                            <span>Arabic => German</span>
+                                            <span>300 USD</span>
+                                            <span>8/21/2019 11:53:36 AM</span>
+                                            <span
+                                                class=" badge badge-pill badge-success align-self-end">Completed</span></a>
+                                    </li>
+                                    <li class="list-group-item order-card my-2"> <a href="orderDetails.html"
+                                            class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none"><span
+                                                class="align-self-start font-weight-bold"><i
+                                                    class="fas fa-chevron-circle-right mr-2"></i>#78476347932</span>
+                                            <span>Legal Translation</span>
+                                            <span>Arabic => German</span>
+                                            <span>300 USD</span>
+                                            <span>8/21/2019 11:53:36 AM</span>
+                                            <span
+                                                class=" badge badge-pill badge-success align-self-end">Completed</span></a>
+                                    </li>
+                                    <li class="list-group-item order-card my-2"> <a href="orderDetails.html"
+                                            class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none"><span
+                                                class="align-self-start font-weight-bold"><i
+                                                    class="fas fa-chevron-circle-right mr-2"></i>#78476347932</span>
+                                            <span>Legal Translation</span>
+                                            <span>Arabic => German</span>
+                                            <span>300 USD</span>
+                                            <span>8/21/2019 11:53:36 AM</span>
+                                            <span
+                                                class=" badge badge-pill badge-success align-self-end">Completed</span></a>
+                                    </li>
+                                    <li class="list-group-item order-card my-2"> <a href="orderDetails.html"
+                                            class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none"><span
+                                                class="align-self-start font-weight-bold"><i
+                                                    class="fas fa-chevron-circle-right mr-2"></i>#78476347932</span>
+                                            <span>Legal Translation</span>
+                                            <span>Arabic => German</span>
+                                            <span>300 USD</span>
+                                            <span>8/21/2019 11:53:36 AM</span>
+                                            <span
+                                                class=" badge badge-pill badge-success align-self-end">Completed</span></a>
+                                    </li>
+                                    <li class="list-group-item order-card my-2"> <a href="orderDetails.html"
+                                            class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none"><span
+                                                class="align-self-start font-weight-bold"><i
+                                                    class="fas fa-chevron-circle-right mr-2"></i>#78476347932</span>
+                                            <span>Legal Translation</span>
+                                            <span>Arabic => German</span>
+                                            <span>300 USD</span>
+                                            <span>8/21/2019 11:53:36 AM</span>
+                                            <span
+                                                class=" badge badge-pill badge-dark align-self-end">Canceled</span></a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <!-- <div class="col-12 col-lg-4">
                                 <h1 class="section-title-side"><span>My Recent orders</span></h1>
                                 <div class="recent-odrder-list px-2">
 
@@ -515,8 +607,8 @@
                                     </div>
 
                                 </div>
-                            </div>
-                            <div class="col-12 col-lg-8">
+                            </div> -->
+                            <div class="col-12 col-lg-5">
                                 <h1 class="section-title-side"><span>Need Help</span></h1>
                             </div>
                         </div>
