Change Side nav UI

--- a/Customer/services.html
+++ b/Customer/services.html
@@ -41,10 +41,10 @@
                     <li class="nav-item mx-3">
                         <a class="nav-link text-dark " href="singup.html"><span
                                 class="nz-btn-gold py-0 my-2 px-2">Account</span></a>
-</li>
-<li class="nav-item mx-3 ">
+                    </li>
+                    <li class="nav-item mx-3 ">
                         <a class="nav-link text-dark" href="/index.html">Log out </a>
-                    
+
                     </li>
                     <li class="nav-item mx-3">
                         <div class="dropdown">
@@ -71,27 +71,39 @@
     <section class="section-main py-5 px-2">
         <div class="row px-3">
             <div class="side-navbar col-12 col-lg-2 flex-sm-row flex-md-row overflow-auto">
-                <div class="list-group flex-row flex-md-column " id="mainTabs" role="tablist"> <a href="dashboad.html"
-                        class="list-group-item text-center p-4 mt-0 mb-4 list-group-item-action"> <i
-                            class="far fa-star fa-3x d-block mb-2"></i> Dashboard </a> <a href="services.html"
-                        class="list-group-item text-center p-4 mt-0 mb-4 list-group-item-action active"> <i
-                            class="fas fa-briefcase fa-3x d-block mb-2"></i> Services </a> <a href="orders.html"
-                        class="list-group-item text-center p-4 mt-0 mb-4 list-group-item-action"> <i
-                            class="fas fa-shopping-cart fa-3x d-block mb-2"></i> Orders </a> <a href="finance.html"
-                        class="list-group-item text-center p-4 mt-0 mb-4 list-group-item-action"> <i
-                            class="fas fa-coins fa-3x d-block mb-2"></i> Finaice </a> <a href="account.html"
-                        class="list-group-item text-center p-4 mt-0 mb-4 list-group-item-action"> <i
-                            class="far fa-address-card fa-3x d-block mb-2"></i> Account </a> <a href="blank.html"
-                        class="list-group-item text-center p-4 mt-0 mb-4 list-group-item-action"> <i
-                            class="far fa-question-circle fa-3x d-block mb-2"></i> Help </a>
+                <div class="list-group flex-row flex-md-column " id="mainTabs" role="tablist">
+                    <a href="dashboad.html" class="list-group-item list-group-item-action ">
+                        <i class="far fa-star fa-2x mr-2"></i>
+                        <span>Dashboard</span>
+                    </a>
+                    <a href="services.html" class="list-group-item list-group-item-action active">
+                        <i class="fas fa-briefcase fa-2x mr-2"></i>
+                        <span>Services</span>
+                    </a>
+                    <a href="orders.html" class="list-group-item list-group-item-action ">
+                        <i class="fas fa-shopping-cart fa-2x mr-2"></i>
+                        <span>Orders</span>
+                    </a>
+                    <a href="finance.html" class="list-group-item list-group-item-action ">
+                        <i class="fas fa-coins fa-2x mr-2"></i>
+                        <span>Finaice</span>
+                    </a>
+                    <a href="account.html" class="list-group-item list-group-item-action ">
+                        <i class="far fa-address-card fa-2x mr-2"></i>
+                        <span>Account</span>
+                    </a>
+                    <a href="blank.html" class="list-group-item list-group-item-action ">
+                        <i class="far fa-question-circle fa-2x mr-2"></i>
+                        <span>Help</span>
+                    </a>
                 </div>
             </div>
             <div class="col-12 col-lg-10 shadow p-5">
                 <h1 class="section-title-side"><span>Translation</span></h1>
-                <div  class="row mb-4">
+                <div class="row mb-4">
                     <div class="col-12 col-md-4 col-lg-3 mb-4">
                         <div class="card  h-100 ">
-                            <a  href="select_service_mode.html" class="card-body card-hover text-dark">
+                            <a href="select_service_mode.html" class="card-body card-hover text-dark">
                                 <h5 class="card-title font-weight-bold d-flex flex-row align-items-center"><i
                                         class="fas fa-chevron-circle-right fa-3x my-3 mr-2"></i>Medical </h5>
                             </a>
@@ -99,7 +111,7 @@
                     </div>
                     <div class="col-12 col-md-4 col-lg-3 mb-4">
                         <div class="card  h-100 ">
-                            <a href="select_service_mode.html"  class="card-body card-hover text-dark">
+                            <a href="select_service_mode.html" class="card-body card-hover text-dark">
                                 <h5 class="card-title font-weight-bold d-flex flex-row align-items-center"><i
                                         class="fas fa-chevron-circle-right fa-3x my-3 mr-2"></i>Legal </h5>
                             </a>
@@ -107,7 +119,7 @@
                     </div>
                     <div class="col-12 col-md-4 col-lg-3 mb-4">
                         <div class="card  h-100 ">
-                            <a href="select_service_mode.html"  class="card-body card-hover text-dark">
+                            <a href="select_service_mode.html" class="card-body card-hover text-dark">
                                 <h5 class="card-title font-weight-bold d-flex flex-row align-items-center"><i
                                         class="fas fa-chevron-circle-right fa-3x my-3 mr-2"></i>Financial </h5>
                             </a>
@@ -115,7 +127,7 @@
                     </div>
                     <div class="col-12 col-md-4 col-lg-3 mb-4">
                         <div class="card  h-100 ">
-                            <a  href="select_service_mode.html"  class="card-body card-hover text-dark">
+                            <a href="select_service_mode.html" class="card-body card-hover text-dark">
                                 <h5 class="card-title font-weight-bold d-flex flex-row align-items-center"><i
                                         class="fas fa-chevron-circle-right fa-3x my-3 mr-2"></i>Subtitling </h5>
                             </a>
