--- a/Customer/orders.html
+++ b/Customer/orders.html
@@ -72,29 +72,29 @@
         <div class="row px-3">
             <div class="side-navbar col-12 col-lg-2 flex-sm-row flex-md-row overflow-auto">
                 <div class="list-group flex-row flex-md-column " id="mainTabs" role="tablist">
-                    <a href="dashboad.html" class="list-group-item text-center p-4 mt-0 mb-4 list-group-item-action">
-                        <i class="far fa-star fa-3x d-block mb-2"></i>
-                        Dashboard
+                    <a href="dashboad.html" class="list-group-item list-group-item-action ">
+                        <i class="far fa-star fa-2x mr-2"></i>
+                        <span>Dashboard</span>
                     </a>
-                    <a href="services.html" class="list-group-item text-center p-4 mt-0 mb-4 list-group-item-action">
-                        <i class="fas fa-briefcase fa-3x d-block mb-2"></i>
-                        Services
+                    <a href="services.html" class="list-group-item list-group-item-action ">
+                        <i class="fas fa-briefcase fa-2x mr-2"></i>
+                        <span>Services</span>
                     </a>
-                    <a href="orders.html" class="list-group-item text-center p-4 mt-0 mb-4 list-group-item-action active">
-                        <i class="fas fa-shopping-cart fa-3x d-block mb-2"></i>
-                        Orders
+                    <a href="orders.html" class="list-group-item list-group-item-action active">
+                        <i class="fas fa-shopping-cart fa-2x mr-2"></i>
+                        <span>Orders</span>
                     </a>
-                    <a href="finance.html" class="list-group-item text-center p-4 mt-0 mb-4 list-group-item-action">
-                        <i class="fas fa-coins fa-3x d-block mb-2"></i>
-                        Finaice
+                    <a href="finance.html" class="list-group-item list-group-item-action ">
+                        <i class="fas fa-coins fa-2x mr-2"></i>
+                        <span>Finaice</span>
                     </a>
-                    <a href="account.html" class="list-group-item text-center p-4 mt-0 mb-4 list-group-item-action">
-                        <i class="far fa-address-card fa-3x d-block mb-2"></i>
-                        Account
+                    <a href="account.html" class="list-group-item list-group-item-action ">
+                        <i class="far fa-address-card fa-2x mr-2"></i>
+                        <span>Account</span>
                     </a>
-                    <a href="blank.html" class="list-group-item text-center p-4 mt-0 mb-4 list-group-item-action">
-                        <i class="far fa-question-circle fa-3x d-block mb-2"></i>
-                        Help
+                    <a href="blank.html" class="list-group-item list-group-item-action ">
+                        <i class="far fa-question-circle fa-2x mr-2"></i>
+                        <span>Help</span>
                     </a>
                 </div>
             </div>
