--- a/Customer/placeOrderSuccess.html
+++ b/Customer/placeOrderSuccess.html
@@ -41,10 +41,10 @@
                     <li class="nav-item mx-3">
                         <a class="nav-link text-dark " href="singup.html"><span
                                 class="nz-btn-gold py-0 my-2 px-2">Account</span></a>
-</li>
-<li class="nav-item mx-3 ">
+                    </li>
+                    <li class="nav-item mx-3 ">
                         <a class="nav-link text-dark" href="/index.html">Log out </a>
-                    
+
                     </li>
                     <li class="nav-item mx-3">
                         <div class="dropdown">
@@ -71,22 +71,36 @@
         <div class="row px-3">
             <div class="side-navbar col-12 col-lg-2 flex-sm-row flex-md-row overflow-auto">
                 <div class="list-group flex-row flex-md-column " id="mainTabs" role="tablist">
-                    <a href="dashboad.html"
-                        class="list-group-item text-center py-4 my-3 list-group-item-action">Dashboard</a>
-                    <a href="services.html"
-                        class="list-group-item text-center py-4 my-3 list-group-item-action active">Services</a>
-                    <a href="orders.html"
-                        class="list-group-item text-center py-4 my-3 list-group-item-action">Orders</a>
-                    <a href="finance.html"
-                        class="list-group-item text-center py-4 my-3 list-group-item-action">Finaice</a>
-                    <a href="account.html"
-                        class="list-group-item text-center py-4 my-3 list-group-item-action">Account</a>
+                    <a href="dashboad.html" class="list-group-item list-group-item-action ">
+                        <i class="far fa-star fa-2x mr-2"></i>
+                        <span>Dashboard</span>
+                    </a>
+                    <a href="services.html" class="list-group-item list-group-item-action ">
+                        <i class="fas fa-briefcase fa-2x mr-2"></i>
+                        <span>Services</span>
+                    </a>
+                    <a href="orders.html" class="list-group-item list-group-item-action active">
+                        <i class="fas fa-shopping-cart fa-2x mr-2"></i>
+                        <span>Orders</span>
+                    </a>
+                    <a href="finance.html" class="list-group-item list-group-item-action ">
+                        <i class="fas fa-coins fa-2x mr-2"></i>
+                        <span>Finaice</span>
+                    </a>
+                    <a href="account.html" class="list-group-item list-group-item-action ">
+                        <i class="far fa-address-card fa-2x mr-2"></i>
+                        <span>Account</span>
+                    </a>
+                    <a href="blank.html" class="list-group-item list-group-item-action ">
+                        <i class="far fa-question-circle fa-2x mr-2"></i>
+                        <span>Help</span>
+                    </a>
                 </div>
             </div>
             <div class="col-12 col-lg-10 shadow p-5">
                 <h1 class="section-title-side"><span>Translation - <span class="font-weight-light">Easy
                             Mode</span></h1>
-                
+
 
             </div>
         </div>
