Change Side nav || dashboard UI

--- a/Customer/dashboad.html
+++ b/Customer/dashboad.html
@@ -68,10 +68,10 @@
         </nav>
     </section>
 
-    <section class="section-main py-5 px-2">
-        <div class="row">
+    <section class="section-main container-fluid">
+        <div class="row px-3">
             <div class="side-navbar col-12 col-lg-2 flex-sm-row flex-md-row overflow-auto">
-                <div class="list-group flex-row flex-md-column " id="mainTabs" role="tablist">
+                <div class="list-group " id="mainTabs" role="tablist">
                     <a href="dashboad.html" class="list-group-item list-group-item-action active">
                         <i class="far fa-star fa-2x mr-2"></i>
                         <span>Dashboard</span>
@@ -99,85 +99,105 @@
                 </div>
             </div>
 
-            <div class="col-12 col-lg-10 shadow p-5">
+            <div class="col-12 col-lg-10 shadow py-4 p-4">
                 <div class="row">
 
                     <div class="col-12 col-lg-7">
                         <h1 class="section-title-side"><span>Translate Now</span></h1>
+                        <!-- Medical
+                        Legal
+                        Financial
+                        Subtitling
+                        Website
+                        Interpretation
+                        Scientific
+                        Other -->
                         <div class="row mb-4">
-                            <div class="col-12 col-md-6 col-lg-4 mb-4">
+                            <div class="col-12 col-md-6 col-lg-6 mb-4">
                                 <div class="card  h-100 ">
-                                    <a href="select_service_mode.html" class="card-body card-hover text-dark">
-                                        <h5 class="card-title font-weight-bold d-flex flex-row align-items-center"><i
-                                                class="fas fa-chevron-circle-right fa-3x my-3 mr-2"></i>Medical </h5>
+                                    <a href="select_service_mode.html"
+                                        class="card-body card-hover text-dark  d-flex flex-row align-items-center ">
+                                        <i class="fas fa-chevron-circle-right fa-3x my-3 mr-2"></i>
+                                        <p class="Lead font-weight-bold m-0">
+                                            Medical </p>
                                     </a>
                                 </div>
                             </div>
-                            <div class="col-12 col-md-6 col-lg-4 mb-4">
+                            <div class="col-12 col-md-6 col-lg-6 mb-4">
                                 <div class="card  h-100 ">
-                                    <a href="select_service_mode.html" class="card-body card-hover text-dark">
-                                        <h5 class="card-title font-weight-bold d-flex flex-row align-items-center"><i
-                                                class="fas fa-chevron-circle-right fa-3x my-3 mr-2"></i>Legal </h5>
+                                    <a href="select_service_mode.html"
+                                        class="card-body card-hover text-dark  d-flex flex-row align-items-center ">
+                                        <i class="fas fa-chevron-circle-right fa-3x my-3 mr-2"></i>
+                                        <p class="Lead font-weight-bold m-0">
+                                            Legal </p>
                                     </a>
                                 </div>
                             </div>
-                            <div class="col-12 col-md-6 col-lg-4 mb-4">
+                            <div class="col-12 col-md-6 col-lg-6 mb-4">
                                 <div class="card  h-100 ">
-                                    <a href="select_service_mode.html" class="card-body card-hover text-dark">
-                                        <h5 class="card-title font-weight-bold d-flex flex-row align-items-center"><i
-                                                class="fas fa-chevron-circle-right fa-3x my-3 mr-2"></i>Financial </h5>
+                                    <a href="select_service_mode.html"
+                                        class="card-body card-hover text-dark  d-flex flex-row align-items-center ">
+                                        <i class="fas fa-chevron-circle-right fa-3x my-3 mr-2"></i>
+                                        <p class="Lead font-weight-bold m-0">
+                                            Financial </p>
                                     </a>
                                 </div>
                             </div>
-                            <div class="col-12 col-md-6 col-lg-4 mb-4">
+                            <div class="col-12 col-md-6 col-lg-6 mb-4">
                                 <div class="card  h-100 ">
-                                    <a href="select_service_mode.html" class="card-body card-hover text-dark">
-                                        <h5 class="card-title font-weight-bold d-flex flex-row align-items-center"><i
-                                                class="fas fa-chevron-circle-right fa-3x my-3 mr-2"></i>Subtitling </h5>
+                                    <a href="select_service_mode.html"
+                                        class="card-body card-hover text-dark  d-flex flex-row align-items-center ">
+                                        <i class="fas fa-chevron-circle-right fa-3x my-3 mr-2"></i>
+                                        <p class="Lead font-weight-bold m-0">
+                                            Subtitling </p>
                                     </a>
                                 </div>
                             </div>
-                            <div class="col-12 col-md-6 col-lg-4 mb-4">
+                            <div class="col-12 col-md-6 col-lg-6 mb-4">
                                 <div class="card  h-100 ">
-                                    <div class="card-body card-hover text-dark">
-                                        <h5 class="card-title font-weight-bold d-flex flex-row align-items-center"><i
-                                                class="fas fa-chevron-circle-right fa-3x my-3 mr-2"></i>Website
+                                    <div class="card-body card-hover text-dark  d-flex flex-row align-items-center ">
+                                        <i class="fas fa-chevron-circle-right fa-3x my-3 mr-2"></i>
+                                        <p class="Lead font-weight-bold m-0">
+                                            Website
                                             localisation
-                                        </h5>
+                                        </p>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12 col-md-6 col-lg-4 mb-4">
+                            <div class="col-12 col-md-6 col-lg-6 mb-4">
                                 <div class="card  h-100 ">
-                                    <div class="card-body card-hover text-dark">
-                                        <h5 class="card-title font-weight-bold d-flex flex-row align-items-center"><i
-                                                class="fas fa-chevron-circle-right fa-3x my-3 mr-2"></i>Interpretation
-                                        </h5>
+                                    <div class="card-body card-hover text-dark  d-flex flex-row align-items-center ">
+                                        <i class="fas fa-chevron-circle-right fa-3x my-3 mr-2"></i>
+                                        <p class="Lead font-weight-bold m-0">
+                                            Interpretation
+                                        </p>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12 col-md-6 col-lg-4 mb-4">
+                            <div class="col-12 col-md-6 col-lg-6 mb-4">
                                 <div class="card  h-100 ">
-                                    <div class="card-body card-hover text-dark">
-                                        <h5 class="card-title font-weight-bold d-flex flex-row align-items-center"><i
-                                                class="fas fa-chevron-circle-right fa-3x my-3 mr-2"></i>Scientific </h5>
+                                    <div class="card-body card-hover text-dark  d-flex flex-row align-items-center ">
+                                        <i class="fas fa-chevron-circle-right fa-3x my-3 mr-2"></i>
+                                        <p class="Lead font-weight-bold m-0">
+                                            Scientific </p>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12 col-md-6 col-lg-4 mb-4">
+                            <div class="col-12 col-md-6 col-lg-6 mb-4">
                                 <div class="card  h-100 ">
-                                    <div class="card-body card-hover text-dark">
-                                        <h5 class="card-title font-weight-bold d-flex flex-row align-items-center"><i
-                                                class="fas fa-chevron-circle-right fa-3x my-3 mr-2"></i>Other </h5>
+                                    <div class="card-body card-hover text-dark  d-flex flex-row align-items-center ">
+                                        <i class="fas fa-chevron-circle-right fa-3x my-3 mr-2"></i>
+                                        <p class="Lead font-weight-bold m-0">
+                                            Other </p>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
 
-                    <div class="col-12 mb-4 col-md-5 order-invoice-wrapper">
+                    <div class="col-12 mb-4 col-lg-5 order-invoice-wrapper ">
                         <h1 class="section-title-side"><span>Invoices</span></h1>
-                        <ul class="list-group recent-odrder-list">
+                        <ul class="list-group recent-odrder-list" style="height: 600px">
                             <li class="list-group-item card-hover my-2">
                                 <a href="invoiceDetails.html"
                                     class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none">
@@ -280,24 +300,14 @@
                         </ul>
                     </div>
                     <div class="col-12 col-lg-12">
-                        <h1 class="section-title-side"><span>Place order now</span></h1>
-
-                        <div class="row mb-5 card-deck">
-                            <div class="col-12 col-lg-3">
-                                <div class="card w-100 rounded-lg">
-                                    <div class="card-body pb-0">
-                                        <h5 class="card-title font-weight-bold">All Services</h5>
-                                    </div>
-                                    <div class="card-footer bg-white border-0">
-                                        <a href="services.html"
-                                            class="btn nz-btn-gold text-uppercase font-weight-bold">Go
-                                            To
-                                            Services List</a>
-                                    </div>
-                                </div>
+                        <h1 class="section-title-side mb-0"><span>Choose one of our other services</span></h1>
+                        <div class="row mb-5">
+                            <div class="col-12 d-flex align-items-end justify-content-end">
+                                <a href="services.html" class="nz-text-gold mb-4 lead">
+                                    All services List
+                                </a>
                             </div>
-
-                            <div class="col-12 col-lg-3">
+                            <div class="col-12 col-lg-4">
                                 <div class="card w-100 rounded-lg">
                                     <div class="card-body pb-0">
                                         <!-- <h5 class="card-title font-weight-bold">Document Clearance</h5> -->
@@ -345,7 +355,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-12 col-lg-3">
+                            <div class="col-12 col-lg-4">
                                 <div class="card w-100 rounded-lg">
                                     <div class="card-body pb-0">
                                         <h5 class="card-title font-weight-bold collapsed d-flex justify-content-between"
@@ -400,7 +410,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-12 col-lg-3">
+                            <div class="col-12 col-lg-4">
                                 <div class="card w-100 rounded-lg">
                                     <div class="card-body pb-0">
                                         <h5 class="card-title font-weight-bold collapsed d-flex justify-content-between"
