--- a/Customer/orders.html
+++ b/Customer/orders.html
@@ -68,10 +68,10 @@
         </nav>
     </section>
 
-    <section class="section-main py-5 px-2">
+    <section class="section-main container-fluid">
         <div class="row px-3">
             <div class="side-navbar col-12 col-lg-2 flex-sm-row flex-md-row overflow-auto">
-                <div class="list-group flex-row flex-md-column " id="mainTabs" role="tablist">
+                <div class="list-group " id="mainTabs" role="tablist">
                     <a href="dashboad.html" class="list-group-item list-group-item-action ">
                         <i class="far fa-star fa-2x mr-2"></i>
                         <span>Dashboard</span>
@@ -98,7 +98,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-12 col-lg-10 shadow p-5">
+            <div class="col-12 col-lg-10 shadow py-4">
                 <h1 class="section-title-side"><span>Orders List</span></h1>
                 <ul class="list-group">
                     <li class="list-group-item order-card my-2"> <a href="orderDetails.html"
