--- a/Customer/blank.html
+++ b/Customer/blank.html
@@ -67,10 +67,10 @@
         </nav>
     </section>
 
-    <section class="section-main py-5 px-2">
+    <section class="section-main container-fluid">
         <div class="row">
             <div class="side-navbar col-12 col-lg-2 flex-sm-row flex-md-row overflow-auto">
-                <div class="list-group flex-row flex-md-column " id="mainTabs" role="tablist">
+                <div class="list-group " id="mainTabs" role="tablist">
                     <a href="dashboad.html" class="list-group-item list-group-item-action active">
                         <i class="far fa-star fa-2x mr-2"></i>
                         <span>Dashboard</span>
